# Cerebra

./: .gitignore  .mcp.json  COMPARE.md  README.md  REGENERATE.md  TERAC.md  colab_worker.ipynb  eslint.config.mjs  instrumentation-node.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  run.sh  tsconfig.base.json
app/: color-schemes.ts  globals.css  layout.tsx  page.tsx
app/api/compare/: route.ts
app/api/generate/: route.ts
app/api/health/: route.ts
app/api/predict/: route.ts
app/api/rate/: route.ts
app/compare/: page.tsx
app/components/: CorticalBrain.tsx  ProgressRail.tsx  Studio.tsx
app/lib/: arena.ts  regen.ts  regenPrompt.ts  studioOptimizer.ts  terac.ts
app/rate/: page.tsx
app/studio/: page.tsx
downloads/: cc2.tsv
engram/: README.md  pyproject.toml
engram/examples/: quickstart.py
engram/src/engram/: __init__.py  config.py  embeddings.py  graph.py  server.py
engram/tests/: test_smoke.py
percept-vision/: .gitignore  README.md  pyproject.toml
percept-vision/examples/: quickstart.py
percept-vision/src/percept_vision/: __init__.py  config.py  graph_link.py  ingest.py  server.py  storage.py  store.py  vision.py
pipeline/: requirements.txt  transcribe.py
regen/job_1782037044237_mc2u42/: .claimed  job.json
regen/job_1782049405218_1ghrjn/: .claimed  job.json
regen/job_1782049405218_8hblck/: .claimed  job.json
regen/job_1782049405218_gr6di8/: .claimed  job.json
regen/job_1782049501967_vqxo5f/: .claimed  job.json
regen/job_1782049501970_zgqfbp/: .claimed  job.json
regen/job_1782049501980_cgtc3l/: .claimed  job.json
regen/job_1782053100105_xikzqf/: job.json
regen/job_1782053100107_ar0x7x/: .claimed  job.json
regen/job_1782053100112_cut8p7/: .claimed  job.json
terac/: .gitignore  README.md  package.json
terac/app/: globals.css  layout.tsx  page.tsx  study.tsx  videos.ts
terac/supabase/: schema.sql
test/: test.py
utils/: download_youtube.py
worker/: Dockerfile  app.py  regen-worker.mjs  requirements.txt  vjepa_fastpath.py
(+11 files in other folders)
