[project]
name = "engram-mcp"
version = "0.1.0"
description = "Engram — a Redis-native context graph + GraphRAG engine, exposed over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cerebra" }]
keywords = ["redis", "redisvl", "mcp", "graphrag", "knowledge-graph", "vector-search", "rag"]
dependencies = [
    "mcp>=1.2.0",
    "redis>=5.0.0",
    "redisvl>=0.3.0",
    "numpy>=1.24",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Optional LLM composition (compose_brief tool). Core graph works without it.
llm = ["anthropic>=0.40.0"]
# Optional OpenAI embeddings instead of local HF.
openai = ["openai>=1.0.0"]

[project.scripts]
engram-mcp = "engram.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]
