[project]
name = "percept-vision-plugin"
version = "0.1.0"
description = "Percept Vision — store videos in object storage + their CV understanding in Redis, then search and ask questions about them. MCP plugin."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Percept" }]
keywords = ["redis", "redisvl", "mcp", "video", "computer-vision", "yolo", "clip", "opencv", "vector-search", "supabase"]
dependencies = [
    "mcp>=1.2.0",
    "redis>=5.0.0",
    "redisvl>=0.3.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "ultralytics>=8.2",
    "sentence-transformers>=2.2.0",
    "pillow>=10.0",
    "supabase>=2.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]

[project.scripts]
percept-vision = "percept_vision.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/percept_vision"]
